# glove_system

./: CMakeLists.txt  README.md  app_main.c  partitions.csv  sdkconfig.defaults
components/ml_inference/: CMakeLists.txt  ml_inference.c  ml_inference.h
data/: default_config.h  gesture_templates.h
main/: CMakeLists.txt  app_main.c  app_main.h  main.c
main/communication/: ble_service.c  ble_service.h
main/config/: pin_definitions.h  system_config.h
main/core/: power_management.c  power_management.h  system_monitor.c  system_monitor.h
main/drivers/: audio.c  audio.h  camera.c  camera.h  display.c  display.h  flex_sensor.c  flex_sensor.h  haptic.c  haptic.h  imu.c  touch.c  touch.h
main/output/: output_manager.c  output_manager.h  text_generation.c  text_generation.h
main/processing/: feature_extraction.c  feature_extraction.h  gesture_detection.c  gesture_detection.h  sensor_fusion.c  sensor_fusion.h
main/tasks/: communcation_task.h  communication_task.c  output_task.c  output_task.h  power_task.c  power_task.h  processing_task.c  processing_task.h  sensor_task.c  sensor_task.h
main/util/: buffer.c  buffer.h  debug.c  debug.h
